2005-01-27  John Luke  <john.luke@gmail.com>

	* CSharpBindingCompilerManager.cs:
	* Parser/CSharpVisitor.cs:
	* Parser/Resolver.cs:
	* FormattingStrategy/CSharpFormattingStrategy.cs: comment out
	some unused lines that produced warnings

2005-01-27  John Luke  <john.luke@gmail.com>

	* CSharp.glade: update to new glade format
	* Gui/CodeGenerationPanel.cs:
	* CSharp.glade: use ComboBox instead of OptionMenu

2005-01-26  John Luke  <john.luke@gmail.com>

	* templates/GtkSharpProject.xpt.xml
	* templates/GnomeSharpProgram.xft.xml
	* templates/GladeSharpProject.xpt.xml: clean up,
	consistent naming, spacing, tabbing

2005-01-24  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpLanguageBinding.cs: 
	* CSharpBindingCompilerManager.cs: Use the new progress monitor API.
	
2005-01-11  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpLanguageBinding.cs: 
	* Gui/ChooseRuntimePanel.cs:
	* Gui/CodeGenerationPanel.cs:
	* CSharpBindingCompilerManager.cs:
	* CSharpBinding.addin.xml:
	* Parser/Parser.cs:
	* Parser/Resolver.cs: Follow architecture changes.
	
	* Project/CSharpCompilerParameters.cs: Moved some parameters and enum
	definitions to DotNetProjectConfiguration.
	
	* CSharp.glade:
	* Gui/OutputOptionsPanel.cs: Removed dialog now implemented in Monodevelop.Base.

	* Project/CSharpProject.cs:
	* CSharpBindingExecutionManager.cs.in: Removed. Not needed any more.
	
	* Makefile.am: Updated.

2004-12-13  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBindingCompilerManager.cs: StatusBarService.ProgressMonitor is
	not a StatusBar widget any more.

2004-12-09  Todd Berman  <tberman@off.net>

	* CSharpBindingCompilerManager.cs: mcs in Mono 1.1.3 now outputs error
	on stderr instead of stdout. The old code just inspected stdout, now
	we look at both.

2004-12-08  Everaldo Canuto  <everaldo_canuto@yahoo.com.br>

	* CSharpBindingCompilerManager.cs: Add support to multiple compilers
	in Makefiles generated by MonoDevelop.

2004-12-07  Alexandre Gomes <alexmipego@hotmail.com>
