@@ -105,6 +105,7 @@ namespace CSharpBinding.Parser
 		{
 			DefaultRegion region = GetRegion(typeDeclaration.StartLocation, typeDeclaration.EndLocation);
 			Class c = new Class(cu, TranslateClassType(typeDeclaration.Type), typeDeclaration.Modifier, region);
+			
 			if (currentClass.Count > 0) {
 				Class cur = ((Class)currentClass.Peek());
 				cur.InnerClasses.Add(c);
@@ -160,7 +161,6 @@ namespace CSharpBinding.Parser
 		{
 			DefaultRegion region     = GetRegion(constructorDeclaration.StartLocation, constructorDeclaration.EndLocation);
 			DefaultRegion bodyRegion = GetRegion(constructorDeclaration.EndLocation, constructorDeclaration.Body != null ? constructorDeclaration.Body.EndLocation : new Point(-1, -1));
-			
 			Class c       = (Class)currentClass.Peek();
 			
 			Constructor constructor = new Constructor(constructorDeclaration.Modifier, region, bodyRegion);
@@ -174,6 +174,18 @@ namespace CSharpBinding.Parser
 			}
 			constructor.Parameters = parameters;
 			c.Methods.Add(constructor);
+			return null;
+		}
+		
+		public override object Visit(AST.DestructorDeclaration destructorDeclaration, object data)
+		{
+			DefaultRegion region     = GetRegion(destructorDeclaration.StartLocation, destructorDeclaration.EndLocation);
+			DefaultRegion bodyRegion = GetRegion(destructorDeclaration.EndLocation, destructorDeclaration.Body != null ? destructorDeclaration.Body.EndLocation : new Point(-1, -1));
+			
+			Class c       = (Class)currentClass.Peek();
+			
+			Destructor destructor = new Destructor(c.Name, destructorDeclaration.Modifier, region, bodyRegion);
+			c.Methods.Add(destructor);
 			return null;
 		}
 		
