@@ -41,6 +41,7 @@ namespace CSharpBinding.Parser
 			this.initialOffset = offset;
 			StringBuilder outText = new StringBuilder();
 			int curOffset = 0;
+			
 			while (curOffset <= initialOffset) {
 				char ch = text[curOffset];
 				
@@ -60,12 +61,8 @@ namespace CSharpBinding.Parser
 					case '\'':
 						outText.Append(ch);
 						curOffset++;
-						// to read '" and '\" ... this should work for these cases
-						if (curOffset <= initialOffset) {
-							outText.Append(text[curOffset++]);
-						}
-						if (curOffset <= initialOffset) {
-							outText.Append(text[curOffset++]);
+						if(! ReadChar(outText, text, ref curOffset)) {
+							return null;
 						}
 						break;
 					case '"':
@@ -112,6 +109,24 @@ namespace CSharpBinding.Parser
 				}
 			}
 			return false;
+		}
+		
+		bool ReadChar(StringBuilder outText, string text, ref int curOffset)
+		{
+			char first = text[curOffset];
+			
+			if (curOffset <= initialOffset) {
+				outText.Append(text[curOffset++]);
+			}
+			if (curOffset <= initialOffset) {
+				outText.Append(text[curOffset++]);
+			}
+			
+			// special case: '\''
+			if(first == '\\' && curOffset <= initialOffset) {
+				outText.Append(text[curOffset++]);
+			}
+			return text[curOffset - 1] == '\'';
 		}
 		
 		bool ReadString(StringBuilder outText, string text, ref int curOffset)
