@@ -1,3 +1,7 @@
+2005-01-28  John Luke  <john.luke@gmail.com>
+
+	* Parser/Parser.cs: update to CanParse
+
 2005-01-27  John Luke  <john.luke@gmail.com>
 
 	* VB.glade: update to new glade format
